cabal-version:      3.0
name:               tiktoken-hs
version:            0.1.0.0
synopsis:           Haskell bindings to the Rust tiktoken library
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alfredo Di Napoli
maintainer:         alfredo@well-typed.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Data.Tokenizer.BPE
    -- other-modules:
    -- other-extensions:
    build-depends:
        base         >= 4.14.3.0 && <5
      , foreign-rust >= 0.1
    hs-source-dirs:   src
    default-language: GHC2021
    build-tool-depends: c2hs:c2hs
    pkgconfig-depends: tiktoken_rs_hs_wrapper-uninstalled

test-suite tiktoken-hs-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base >=4.14.3.0 && <5
        , hspec < 2.12
        , QuickCheck < 2.15
        , tiktoken-hs
    pkgconfig-depends: tiktoken_rs_hs_wrapper-uninstalled
