cabal-version:      3.0
name:               tiktoken-hs
version:            0.1.0.0
synopsis:           Haskell bindings to a very limited subset of the Rust tiktoken library
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alfredo Di Napoli
maintainer:         alfredo@well-typed.com
category:           Data
build-type:         Custom
extra-doc-files:    CHANGELOG.md

data-files: test-data/aws_transcribe.vtt

common lang
    ghc-options: -Wall
    default-language: Haskell2010
    extra-libraries: tiktoken_rs_hs_wrapper

custom-setup
  setup-depends:
      base
    , Cabal

library
    import:           lang
    exposed-modules:
      Data.Tokenizer.BPE
    other-modules:
      Paths_tiktoken_hs
    build-depends:
        base         >= 4.14.3.0 && <5
      , foreign-rust >= 0.1
      , text
    hs-source-dirs:   src
    build-tool-depends: c2hs:c2hs

test-suite tiktoken-hs-test
    import:           lang
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base >=4.14.3.0 && <5
        , hspec < 2.12
        , tiktoken-hs
        , text
    other-modules:
      Paths_tiktoken_hs
